--- a/StowAway/Base.lproj/Main.storyboard
+++ b/StowAway/Base.lproj/Main.storyboard
@@ -97,7 +97,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Where do your UBER receipts go?" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="wKB-x6-bAU">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Where do your UBER receipts go?" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="280" translatesAutoresizingMaskIntoConstraints="NO" id="wKB-x6-bAU">
                                 <rect key="frame" x="20" y="63" width="280" height="54"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
@@ -106,7 +106,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="pirate@gmail.com" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3Kr-F5-29m">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="pirate@gmail.com" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="3Kr-F5-29m">
                                 <rect key="frame" x="21" y="125" width="280" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -118,9 +118,6 @@
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="00E-pe-7If">
                                 <rect key="frame" x="46" y="252" width="213" height="53"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="53" id="uV6-8f-xRJ"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <state key="normal" title="Authenticate with Google">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -140,7 +137,7 @@
                                     <action selector="mailProviderSelected:" destination="FZI-WL-nLp" eventType="touchUpInside" id="wwc-4h-jdg"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ldK-sc-fCc">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ldK-sc-fCc">
                                 <rect key="frame" x="195" y="220" width="64" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Other"/>
@@ -148,7 +145,7 @@
                                     <action selector="mailProviderSelected:" destination="FZI-WL-nLp" eventType="touchUpInside" id="eLf-lo-8vN"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Pick your mail service provider ?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jzU-wQ-GeV">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pick your mail service provider ?" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jzU-wQ-GeV">
                                 <rect key="frame" x="22" y="179" width="279" height="51"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
@@ -158,7 +155,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ja2-5M-48S">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ja2-5M-48S">
                                 <rect key="frame" x="95" y="370" width="113" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Got It...aye aye !">
@@ -168,7 +165,7 @@
                                     <segue destination="Gqh-qZ-Ggc" kind="push" identifier="go to payment" id="Sys-CD-7Ga"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="To read uber receipts, you will need to set your email in ubers account settings to pirate@stowaway.com" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="281" translatesAutoresizingMaskIntoConstraints="NO" id="JtQ-3V-xff">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="To read uber receipts, you will need to set your email in ubers account settings to pirate@stowaway.com" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="281" translatesAutoresizingMaskIntoConstraints="NO" id="JtQ-3V-xff">
                                 <rect key="frame" x="20" y="298" width="281" height="64"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
@@ -178,7 +175,7 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Don't worry... you will also get uber receipts at pirate@yourdomain.com" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="281" translatesAutoresizingMaskIntoConstraints="NO" id="fj8-jl-bwF">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Don't worry... you will also get uber receipts at pirate@yourdomain.com" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="281" translatesAutoresizingMaskIntoConstraints="NO" id="fj8-jl-bwF">
                                 <rect key="frame" x="22" y="420" width="281" height="40"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
@@ -194,30 +191,28 @@
                             <constraint firstItem="jzU-wQ-GeV" firstAttribute="trailing" secondItem="3Kr-F5-29m" secondAttribute="trailing" id="13c-y5-OCA"/>
                             <constraint firstItem="ldK-sc-fCc" firstAttribute="leading" secondItem="h2o-fV-4Ko" secondAttribute="trailing" constant="77" id="1Uc-d7-LyN"/>
                             <constraint firstItem="fj8-jl-bwF" firstAttribute="leading" secondItem="jzU-wQ-GeV" secondAttribute="leading" id="21O-P9-kUn"/>
+                            <constraint firstItem="00E-pe-7If" firstAttribute="leading" secondItem="h2o-fV-4Ko" secondAttribute="leading" id="4aC-fe-2sj"/>
                             <constraint firstAttribute="trailing" secondItem="3Kr-F5-29m" secondAttribute="trailing" constant="19" id="BCF-zB-IGr"/>
-                            <constraint firstItem="h2o-fV-4Ko" firstAttribute="leading" secondItem="00E-pe-7If" secondAttribute="leading" id="COU-xd-aNK"/>
-                            <constraint firstItem="00E-pe-7If" firstAttribute="centerX" secondItem="ja2-5M-48S" secondAttribute="centerX" constant="1" id="Ccb-7I-2Yf"/>
                             <constraint firstItem="wKB-x6-bAU" firstAttribute="top" secondItem="qVg-oz-hBd" secondAttribute="top" constant="63" id="NQj-Wb-tID"/>
                             <constraint firstItem="JtQ-3V-xff" firstAttribute="leading" secondItem="wKB-x6-bAU" secondAttribute="leading" id="P1o-sQ-VJt"/>
                             <constraint firstItem="wKB-x6-bAU" firstAttribute="leading" secondItem="qVg-oz-hBd" secondAttribute="leading" constant="20" symbolic="YES" id="Rje-Vi-cvT"/>
+                            <constraint firstItem="00E-pe-7If" firstAttribute="leading" secondItem="qVg-oz-hBd" secondAttribute="leading" constant="46" id="WX2-Ur-yXB"/>
+                            <constraint firstItem="00E-pe-7If" firstAttribute="trailing" secondItem="ldK-sc-fCc" secondAttribute="trailing" id="anG-E5-bB7"/>
                             <constraint firstItem="ldK-sc-fCc" firstAttribute="baseline" secondItem="h2o-fV-4Ko" secondAttribute="baseline" id="de1-W9-nyn"/>
                             <constraint firstItem="jzU-wQ-GeV" firstAttribute="leading" secondItem="qVg-oz-hBd" secondAttribute="leading" constant="22" id="ePt-Rm-qI3"/>
-                            <constraint firstItem="00E-pe-7If" firstAttribute="leading" secondItem="qVg-oz-hBd" secondAttribute="leading" constant="46" id="gfR-k9-lvE"/>
+                            <constraint firstItem="00E-pe-7If" firstAttribute="top" secondItem="ldK-sc-fCc" secondAttribute="bottom" constant="2" id="fmf-5b-uba"/>
                             <constraint firstItem="jzU-wQ-GeV" firstAttribute="top" secondItem="3Kr-F5-29m" secondAttribute="bottom" constant="24" id="h0r-zh-PZx"/>
-                            <constraint firstItem="00E-pe-7If" firstAttribute="top" secondItem="ldK-sc-fCc" secondAttribute="bottom" constant="2" id="iSW-Up-jLY"/>
                             <constraint firstItem="3Kr-F5-29m" firstAttribute="top" secondItem="wKB-x6-bAU" secondAttribute="bottom" constant="8" symbolic="YES" id="mYd-FZ-ujj"/>
                             <constraint firstItem="h2o-fV-4Ko" firstAttribute="top" secondItem="3Kr-F5-29m" secondAttribute="bottom" constant="65" id="oQA-xt-6Xj"/>
                             <constraint firstAttribute="trailing" secondItem="wKB-x6-bAU" secondAttribute="trailing" constant="20" symbolic="YES" id="oU7-fq-a0h"/>
-                            <constraint firstItem="ldK-sc-fCc" firstAttribute="trailing" secondItem="00E-pe-7If" secondAttribute="trailing" id="uH0-mY-MQq"/>
-                            <constraint firstAttribute="trailing" secondItem="00E-pe-7If" secondAttribute="trailing" constant="61" id="ucx-nF-TZb"/>
                             <constraint firstItem="ja2-5M-48S" firstAttribute="top" secondItem="JtQ-3V-xff" secondAttribute="bottom" constant="8" symbolic="YES" id="vH7-z4-dSI"/>
-                            <constraint firstItem="ja2-5M-48S" firstAttribute="top" secondItem="00E-pe-7If" secondAttribute="bottom" constant="65" id="wWL-a1-qq5"/>
                             <constraint firstAttribute="trailing" secondItem="fj8-jl-bwF" secondAttribute="trailing" constant="17" id="yMi-Km-za6"/>
+                            <constraint firstAttribute="trailing" secondItem="00E-pe-7If" secondAttribute="trailing" constant="61" id="zXW-mQ-pjo"/>
                             <constraint firstAttribute="bottom" secondItem="fj8-jl-bwF" secondAttribute="bottom" constant="20" symbolic="YES" id="zml-g2-Z6h"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Link Receipts" id="jz6-rn-ygD">
-                        <barButtonItem key="rightBarButtonItem" title="next" style="plain" id="WSa-bJ-nYR"/>
+                        <barButtonItem key="rightBarButtonItem" title="next" id="WSa-bJ-nYR"/>
                     </navigationItem>
                     <connections>
                         <outlet property="askMailProviderLabel" destination="jzU-wQ-GeV" id="MUx-mq-Pay"/>
